@@ -216,6 +216,11 @@ Specifies the client identifier string.
 uses the default client identifier (MAC address of the network
 interface) if it is not specified.
 .TP
+.BI \-M
+Prevents
+.B dhcpcd
+from setting the \fIMTU\fR provided by the DHCP server.
+.TP
 .BI \-N
 Prevents
 .B dhcpcd
